[gd_scene load_steps=29 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://groundDark.png" type="Texture" id=3]
[ext_resource path="res://Boy.gd" type="Script" id=4]
[ext_resource path="res://Run (1).png" type="Texture" id=5]
[ext_resource path="res://Run (2).png" type="Texture" id=6]
[ext_resource path="res://Run (3).png" type="Texture" id=7]
[ext_resource path="res://Run (4).png" type="Texture" id=8]
[ext_resource path="res://Run (5).png" type="Texture" id=9]
[ext_resource path="res://Run (6).png" type="Texture" id=10]
[ext_resource path="res://Run (7).png" type="Texture" id=11]
[ext_resource path="res://Run (8).png" type="Texture" id=12]
[ext_resource path="res://Run (9).png" type="Texture" id=13]
[ext_resource path="res://Run (10).png" type="Texture" id=14]
[ext_resource path="res://Run (11).png" type="Texture" id=15]
[ext_resource path="res://Run (12).png" type="Texture" id=16]
[ext_resource path="res://Run (13).png" type="Texture" id=17]
[ext_resource path="res://Run (14).png" type="Texture" id=18]
[ext_resource path="res://Run (15).png" type="Texture" id=19]
[ext_resource path="res://takeFire.ogg" type="AudioStream" id=20]
[ext_resource path="res://fireBall.ogg" type="AudioStream" id=21]
[ext_resource path="res://waterShield.ogg" type="AudioStream" id=22]
[ext_resource path="res://GUI.gd" type="Script" id=23]
[ext_resource path="res://Life.tscn" type="PackedScene" id=24]
[ext_resource path="res://Fire.tscn" type="PackedScene" id=25]
[ext_resource path="res://C-BooL-â€“-Magic-Symphony-_feat-Giang-Pham_.ogg" type="AudioStream" id=26]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 37.0119, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "move",
"speed": 20.0
} ]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Parallax" type="ParallaxBackground" parent="." index="0"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="background" type="ParallaxLayer" parent="Parallax" index="0"]

motion_scale = Vector2( 0.5, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 645, 0 )
_sections_unfolded = [ "Motion" ]

[node name="back" type="Sprite" parent="Parallax/background" index="0"]

position = Vector2( 325.129, 174.516 )
scale = Vector2( 0.924702, 1 )
texture = ExtResource( 2 )

[node name="ground" type="ParallaxLayer" parent="Parallax" index="1"]

editor/display_folded = true
motion_scale = Vector2( 0.5, 1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 645, 0 )
_sections_unfolded = [ "Motion" ]

[node name="ground" type="Sprite" parent="Parallax/ground" index="0"]

position = Vector2( 321.642, 324.988 )
scale = Vector2( 1.25031, 1 )
texture = ExtResource( 3 )

[node name="Boy" type="Area2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( -7.53671, 6.02936 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boy" index="0"]

position = Vector2( 247.856, 259.84 )
scale = Vector2( 0.890326, 4.44237 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="Boy" index="1"]

position = Vector2( 280.873, 258.09 )
scale = Vector2( 0.255093, 0.23071 )
frames = SubResource( 2 )
animation = "move"
_sections_unfolded = [ "Transform" ]

[node name="Fire" type="AudioStreamPlayer" parent="Boy" index="2"]

stream = ExtResource( 20 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Blust" type="AudioStreamPlayer" parent="Boy" index="3"]

stream = ExtResource( 21 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="WaterShield" type="AudioStreamPlayer" parent="Boy" index="4"]

stream = ExtResource( 22 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GUI" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 23 )

[node name="Life" parent="GUI" index="0" instance=ExtResource( 24 )]

margin_left = 24.0
margin_top = 23.0
margin_right = 161.0
margin_bottom = 43.0

[node name="Fire2" parent="GUI" index="1" instance=ExtResource( 25 )]

margin_left = 24.0
margin_top = 59.0
margin_right = 161.0
margin_bottom = 79.0

[node name="Cam" type="Camera2D" parent="." index="3"]

position = Vector2( -1.53671, 1.02936 )
scale = Vector2( 0.663569, 0.677732 )
anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.1
drag_margin_top = 1.0
drag_margin_right = 0.2
drag_margin_bottom = 1.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="Cells" type="Node2D" parent="." index="4"]

position = Vector2( 644.692, 237.166 )

[node name="Archers" type="Node2D" parent="." index="5"]

position = Vector2( 644.692, 237.166 )

[node name="Back" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 26 )
volume_db = -25.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="Boy" to="Boy" method="_on_Boy_area_entered"]


